--- a/index.html
+++ b/index.html
@@ -21,3 +21,43 @@ layout: default
   <div class="bounce2"></div>
   <div class="bounce3"></div>
 </div>
+<!doctype html>
+<html lang="en">
+
+<head>
+	  <meta charset="utf-8"/>
+	  <title>PreLoadMe</title>
+
+	  <!-- Please support http://humanstxt.org/ -->
+	  <link type="text/plain" rel="author" href="http://www.gerbers.ch/humans.txt"/>
+
+	  <!-- Stylesheet -->
+	  <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen, print"/>
+	  
+</head>
+
+<body>
+<!-- Preloader -->
+<div id="preloader">
+	<div id="status">&nbsp;</div>
+</div>
+
+<!-- Your Website Content -->
+<div>This is your website content</div>
+
+<!-- jQuery Plugin -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<!-- Preloader -->
+<script type="text/javascript">
+	//<![CDATA[
+		$(window).on('load', function() { // makes sure the whole site is loaded 
+			$('#status').fadeOut(); // will first fade out the loading animation 
+            $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website. 
+            $('body').delay(350).css({'overflow':'visible'});
+		})
+	//]]>
+</script> 
+
+</body>
+</html>
