--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ layout: default
 </head>
 
 <body>
+	
+<span style="cursor:crosshair">crosshair</span><br>
 <!-- Preloader -->
 <div id="preloader">
 	<div id="status">&nbsp;</div>
